@@ -1,6 +1,9 @@
 			SWI-Prolog ChangeLog
 			====================
 
+  * ENHANCED: use per-message-queue mutex for synchronising the
+    queue access in the MT version.  Sergey Tikhonov.
+
   * PORT: Check whether mmap() can map regular files and check for
     the need of _XOPEN_SOURCE.  Fixes QNX portability. See
     http://gollem.swi.psy.uva.nl/twiki/pl/bin/view/Porting/BuildQNX
